# openrpg3d

./: CMakeLists.txt  README.md  main.cpp
church/: Nousiainen_Church_SF.mtl
engine/: camera.cpp  camera.h  drawable.cpp  drawable.h  material_data.h  mesh.cpp  mesh.h  mesh_data.h  mesh_def.h  movable.cpp  movable.h  render_context.h  renderer.cpp  renderer.h  rgba_data.h  texture.cpp  texture.h  texture_data.h  vertex.h
model/: model.dae
